src/test/deca/context/invalid/SansObjet/DeclVar-And-int-float-float.deca
// Description:
//    Declaration of a int variable using && operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    float y = 2.5; 
    int z = x && y ; 
}
